fix: collapsed sidebar vertical alignment

--- a/webui/src/scss/_layout.scss
+++ b/webui/src/scss/_layout.scss
@@ -211,6 +211,11 @@ body {
 				margin-top: -5px;
 			}
 		}
+
+		.sidebar-brand-narrow {
+			margin-top: -6px;
+			margin-bottom: -6px;
+		}
 	}
 
 	.sidebar-header.brand {
